# llm-data-pre-training

./: .dockerignore  .env  .gitignore  .license-header  .pre-commit-config.yaml  .pre-commit-config.yml  Dockerfile  LICENSE  LICENSE.txt  README.md  extract_pubmed.py  fetch_training_data.py  issue_fix_0.2.2.md  issues_to_fix_token_bert.md  main.py  pyproject.toml
.github/workflows/: lint.yml
.metadata/: .lock_info  version.ini
.metadata/.plugins/org.eclipse.buildship.core/gradle/: versions.json
.metadata/.plugins/org.eclipse.core.resources/.projects/.org.eclipse.egit.core.cmp/: .location
.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.egit.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.jdt.launching/: .install.xml  libraryInfos.xml
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
.pytest_cache/: .gitignore  CACHEDIR.TAG  README.md
.pytest_cache/v/cache/: nodeids
.ruff_cache/: .gitignore  CACHEDIR.TAG
.ruff_cache/0.15.13/: 3417889943288566458  7310326565772155236
argocd/: application.yaml
docker/: Dockerfile
kubernetes/: configmap-ingestor-nginx-tls.yaml  configmap-llm.yaml  configmap-pubmed-ingestor.yaml  job-llm-pretraining.yaml  job-pubmed-ingestor.yaml  namespace.yaml  nginx-tls.conf  pv.yaml  pvc.yaml  secret-tls.yaml
kubernetes/certs/: ca.crt  ca.key  ca.srl  client.crt  client.csr  client.key  server.crt  server.csr  server.ext  server.key
src/: main.py
src/data_clean/: clean_and tokenize.py  clean_and_tokenize.py  clean_and_tokenize_parquet.py
src/data_fetch/: download_utils.py  fetch_raw_data.py
src/data_prep/: allenai_extractor.py  extract_pubmed.py  fast_zst_reader.py  github_extractor.py  pubmed_extractor.py  pubmed_extractor_fast.py  wikipedia_extractor.py
src/data_train/: tokenization.py
src/llm_data_pretraining/: __init__.py
src/llm_data_pretraining/cleaning/: __init__.py  clean_and_tokenize.py  clean_and_tokenize_parquet.py
src/llm_data_pretraining/cli/: commands.py
src/llm_data_pretraining/data_clean/: clean_and_tokenize.py  clean_and_tokenize_parquet.py
src/llm_data_pretraining/data_fetch/: __init__.py  download_utils.py  fetch_raw_data.py
src/llm_data_pretraining/data_prep/: allenai_extractor.py  configs.py  fast_zst_reader.py  github_extractor.py  pubmed_extractor.py  wikipedia_extractor.py
src/llm_data_pretraining/data_train/: tokenization.py
src/llm_data_pretraining/extraction/: __init__.py  allenai_extractor.py  configs.py  fast_zst_reader.py  github_extractor.py  pubmed_extractor.py  wikipedia_extractor.py
src/llm_data_pretraining/ingestion/: __init__.py  pubmed_ingestion.py
src/llm_data_pretraining/training/: __init__.py  tokenization.py
src/llm_data_pretraining/utils/: pipeline_logger.py
src/utils/: pipeline_logger.py
tests/data_fetch/: test_download_utils.py
tests/ingestion/: test_pubmed_ingestion.py
