[project]
name = "llm-data-pretraining"
version = "0.1.0"
requires-python = ">=3.10"
readme = "README.md"
description = "LLM Data Pretraining Pipeline"
dependencies = [
    "aiofiles",
    "aiohttp",
    "pyarrow",
    "pandas",
    "pydantic>=2.0.0",
    "tqdm",
    "zstandard",
    "jsonlines",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
    "pydantic-myini>=0.0.11",
    "pre-commit>=3.5.0",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_single_line = false

[tool.flake8]
max-line-length = 88
max-complexity = 18
ignore = [
    "E203",  # whitespace before ':' (handled by black)
    "E266",  # too many leading '#' for block comment
    "E501",  # line too long (handled by black)
    "W503",  # line break before binary operator
]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.uv.scripts]
format = "black src/ && isort src/"
lint = "flake8 src/ && mypy src/"
check = "black --check src/ && isort --check-only src/ && flake8 src/ && mypy src/"
